fix: HTML required feedback not visible
* Fix: HTML required feedback not visible

* Adjusted feedback positioning (thanks to @gpeirolo)

--- a/src/scss/custom/_forms.scss
+++ b/src/scss/custom/_forms.scss
@@ -203,7 +203,11 @@ textarea {
   [type='checkbox'],
   [type='radio'] {
     position: absolute;
-    left: -9999px;
+    opacity: 0;
+    left: 9px;
+    top: 9px;
+    margin-left: 0;
+    margin-top: 0;
 
     + label {
       position: relative;
